--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-    color: rgb(7, 70, 46);
+    color: rgb(150, 150, 150);
     line-height: 100px;
     margin-left: 20px;
     margin-top: 0;
@@ -45,7 +45,7 @@ a:hover {
 }
 
 a p {
-    background-color: whitesmoke;
+    background-color: rgb(159, 243, 215);
     font-size: 14px;
 }
 
@@ -60,7 +60,7 @@ a p:active {
 
 #container-top {
     width: 800px;
-    background-image: url("../images/photo-bkg.jpg");
+    background-image: url("../images/juggler.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: powderblue;
@@ -72,18 +72,18 @@ a p:active {
 }
 
 #masthead {
-    height: 100px;
-    background-image: url("../images/buddha.jpg");
+    height: 600px;
+    background-image: url("../images/Cylinder exercise 2.jpg");
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
 }
 
 #content-holder {
-    position:relative;
+    position: relative;
 }
 
-#transparent-flower {
+#funsketch {
     position: absolute;
     right: 0;
     bottom: -20px;
